--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bootstrap": "^5.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "rxjs": "~7.5.0",
